--- a/static/css/_adaptive.scss
+++ b/static/css/_adaptive.scss
@@ -983,7 +983,8 @@
     }
 }
 
-Price on single service @media(max-width:805px) {
+//Price on single service
+@media(max-width:805px) {
     .single-services-block__text {
         display: block !important;
     }
