--- a/static/css/new_style.css
+++ b/static/css/new_style.css
@@ -4039,6 +4039,29 @@ input.wpcf7-form-control.has-spinner.wpcf7-submit {
     display: none !important;
   }
 }
+@media (max-width: 805px) {
+  .single-services-block__text {
+    display: block !important;
+  }
+  .single_services-block__text-price {
+    display: block !important;
+  }
+  .single_services-block__text {
+    width: 100% !important;
+  }
+}
+@media (max-width: 530px) {
+  .single_services-block__text .contact_form {
+    display: grid !important;
+  }
+  .single-services-block {
+    padding: 0 0 20px !important;
+  }
+  .single_services-block__text-price {
+    width: 100% !important;
+    text-align: center !important;
+  }
+}
 @-webkit-keyframes gradient {
   0% {
     background-position: 0% 50%;
