блог- убрал высоту

--- a/static/css/new_style.scss
+++ b/static/css/new_style.scss
@@ -2066,10 +2066,9 @@ a.tags_item {
     width: 100%
 }
 
-.blog-block__grid .articles__img {
-    height: 200px
-}
-
+// .blog-block__grid .articles__img {
+//     height: 200px
+// }
 .blog-block__grid .articles__img img {
     max-height: 200px;
     object-fit: cover;
