высоту убрал - блог

--- a/static/css/new_style.scss
+++ b/static/css/new_style.scss
@@ -2070,7 +2070,7 @@ a.tags_item {
 //     height: 200px
 // }
 .blog-block__grid .articles__img img {
-    // max-height: 200px;
+    max-height: 200px;
     object-fit: cover;
     border-radius: 5px 5px 0 0;
 }
