--- a/static/css/new_style.scss
+++ b/static/css/new_style.scss
@@ -2828,3 +2828,21 @@ input.wpcf7-form-control.has-spinner.wpcf7-submit {
         padding-bottom: 50px;
     }
 }
+
+// index.php - mini contact form
+.tarifs_desktop {
+    .contact_form-row {
+        display: flex;
+        gap: 10px;
+        .contact_form {
+            grid-template-columns: repeat(2, 1fr)
+        }
+        .tabs_price_list {
+            height: fit-content;
+        }
+        .wpcf7 {
+            width: 70%;
+            margin-top: -17px;
+        }
+    }
+}
