--- a/static/css/_adaptive.scss
+++ b/static/css/_adaptive.scss
@@ -847,27 +847,25 @@
     //     border-top: 1px solid $article-text-color;
     //     grid-template-columns: repeat(3, 1fr);
     // }
-    .footer_left-side {
-        padding-bottom: 600px;
-    }
-}
-
-@media(max-width: 390px) {
-    .footer_left-side {
-        padding-bottom: 680px;
-    }
-}
-
-@media(max-width: 550px) {
-    .footer_left-side,
-    .footer__navigation {
-        width: 50%;
-    }
-    // .cities{
-    //     grid-template-columns: repeat(2, 1fr);
+    // .footer_left-side {
+    //     padding-bottom: 600px;
     // }
 }
 
+// @media(max-width: 390px) {
+//     .footer_left-side {
+//         padding-bottom: 680px;
+//     }
+// }
+// @media(max-width: 550px) {
+//     .footer_left-side,
+//     .footer__navigation {
+//         width: 50%;
+//     }
+//     // .cities{
+//     //     grid-template-columns: repeat(2, 1fr);
+//     // }
+// }
 @media(max-width: 460px) {
     .menu-footer__list {
         gap: 11px
@@ -1008,5 +1006,24 @@
     .single_services-block__text-price {
         width: 100% !important;
         text-align: center !important;
+    }
+}
+
+@media (max-width:768px) {
+    .directions,
+    .our_garant,
+    .about_topland {
+        display: none;
+    }
+    .main-image__el {
+        .img1 {
+            display: none;
+        }
+    }
+    .footer__navigation {
+        display: none;
+    }
+    .footer_left-side {
+        width: 100%;
     }
 }
